# rand-game

./: .gitignore  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
config/: building.yaml  recipe.yaml  research.yaml  server.env.toml  server.rules.toml
crates/binary/: Cargo.toml
crates/binary/src/: flatbuffer_reader.rs  main.rs
crates/binary/src/bot/: mod.rs  model.rs  observation.rs  output.rs  pathfinding.rs  pathfinding_tests.rs  planner.rs  planner_tests.rs  rules_tests.rs  verify.rs
crates/binary/src/bot/behavior/: craft.rs  mine.rs  mod.rs  navigate.rs  put.rs
crates/client/: Cargo.toml
crates/client/src/: http.rs  main.rs  map_view.rs  options.rs  terminal.rs
crates/common/: Cargo.toml  build.rs
crates/common/examples/: gen_example.rs
crates/common/schema/: game_common.fbs  game_input.fbs  game_output.fbs
crates/common/src/: framing.rs  lib.rs  rules.rs
crates/common/src/flatbuffers_generated/: game_common_generated.rs  game_input_generated.rs  game_output_generated.rs
crates/server/: Cargo.toml
crates/server/src/: action_log.rs  api.rs  config.rs  main.rs  model.rs  protocol.rs  rules.rs  runner.rs  state.rs  storage.rs  tick.rs  world.rs
crates/server/src/api/: map_view.rs  mod.rs
crates/server/src/rules/: generation.rs  mod.rs  validation.rs
crates/server/src/world/: cargo.rs  mod.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
