[package]
name = "rand-game-common"
version = "0.1.0"
edition.workspace = true
license = "Apache-2.0"
build = "build.rs"

[dependencies]
flatbuffers = "25"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

[build-dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
