[package]
name = "rand-game-server"
version = "0.1.0"
edition.workspace = true
license = "AGPL-3.0-or-later"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
bytes = "1"
flatbuffers = "25"
rand-game-common = { path = "../common" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["fs", "macros", "net", "rt-multi-thread", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
wait-timeout = "0.2"
